--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   ],
   "author": "Sunny To",
   "license": "ISC",
+  "devDependencies": {
+    "react": "^0.14.7",
+    "react-redux": "^3.1.0"
+  }
   "peerDependencies": {
     "react-redux": "^3.1.0"
   }
