--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "A shared package for react shared components.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "\"babel-tape-runner tests/**/*.js | tap-spec\""
+    "compile:lib": "babel src -d lib",
+    "build": "npm run compile:lib",
+    "test": "babel-tape-runner tests/**/*.js | tap-spec"
   },
   "keywords": [
-    "\"react\"",
-    "\"redux\""
+    "react",
+    "redux"
   ],
   "author": "Sunny To",
   "license": "ISC",
   "devDependencies": {
     "react": "^0.14.7",
-    "redux": "^3.1.0"
+    "redux": "^3.1.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13"
   },
   "peerDependencies": {
     "redux": "^3.1.0"
