--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13"
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-tape-runner": "^2.0.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.4.0"
   },
   "peerDependencies": {
     "redux": "^3.1.0"
