--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-tape-runner": "^2.0.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.4.0"
+    "tape": "^4.4.0",
+    "seamless-immutable": "^4.1.0"
   },
   "peerDependencies": {
-    "redux": "^3.1.0"
+    "redux": "^3.1.0",
+    "seamless-immutable": "^4.1.0"
   }
 }
